fix: Issue nav: Linebreaks in issue seq number

--- a/_sass/issue_page.scss
+++ b/_sass/issue_page.scss
@@ -178,6 +178,7 @@ body.layout--issue {
       .issue-id, .menu-wrapper > .trigger {
         @include header;
         margin: 0;
+        white-space: nowrap;
       }
 
       .issue-id {
